# Modern-Python-Project-Template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
src/: exceptions.py  settings.py  utils.py
src/cli/: main.py
src/process/: processor.py
