[project]
name = "modern-python-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.1",
    "azure-keyvault-secrets>=4.10.0",
    "boto3>=1.41.5",
    "google-cloud-secret-manager>=2.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "structlog>=25.5.0",
]

[tool.pytest.ini_options]
testpaths = [ "src/tests" ]
pythonpath = [ "." ]

[tool.ruff]
target-version = "py312"
lint.extend-select = [
    "I",     # Imports
    "B",     # Bandit
    "PTH",   # Pathlib
    "ARG",   # Unused Args
    "C4",    # Force Current List Comprehensions
    "RET"    # Return Checks
]

[dependency-groups]
dev = [
    "prek>=0.3.8",
    "pytest>=9.0.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.4",
    "ty>=0.0.26",
]
